# DoseRateQA

./: Flash_Doserate_QA.prj  README.md
DRqa/: DoseRateQA.fig  DoseRateQA.m  runDRqa.m  runGetDoseTiming.m
REGGUI/: Add_Default_MC2_SimuParams.m  ComputeFinalDose.m  Compute_SPR_data.m  Create_patient_dose_info.m  Crop_body_contour.m  Data2data.m  Data2field.m  Data2image.m  Dicom_to_MC2_coordinates.m  DilateROI.m  Export_MC2_CT.m  Export_MC2_Config.m  Export_MC2_Field.m  Export_field.m  Export_image.m  Field_exponential.m  Generate_MC2_Config.m  Get_reggui_data.m  HU_convert.m  Import_MC2_MHD_image.m  Import_contour.m  Import_data.m  Import_image.m  Import_plan.m  Import_tx_records.m  Initialize_reggui_handles.m  MC2_compute.m  MC2_import_ElecDensity.m  MC2_import_SP_data.m  MC2_import_scanner_file.m  MC2_simulation.m  MCsquare_Param_GUI.m  MCsquare_advanced_GUI.m  MU_to_NumProtons.m  Prepare_CT_for_MC2.m  Prepare_Plan_for_MC2.m  Prepare_deformation_fields.m  Project_on_isoplane.m  Registration_ITK_rigid_multimodal.m  Registration_rigid.m  (+102 more)
REGGUI_GUI/: addpath_reggui.m  reggui.m
REGGUI_GUI/lib/itk/affine_reg/: CMakeLists.txt  MyAffineRegistration.cxx  Registration_ITK_affine.m  itkMattesMutualInformationImageToImageMetricNew.h  itkSamplesMeanSquaresImageToImageMetric.txx  itkSamplesNormalizedCorrelationImageToImageMetric.h  itkSamplesNormalizedCorrelationImageToImageMetric.txx
REGGUI_GUI/lib/itk/bspline_reg/: CMakeLists.txt  MyRegistration.cxx  Registration_ITK_bspline.m  itkMyImageSeriesReader.h  itkMyImageSeriesReader.txx  itkSamplesMeanSquaresImageToImageMetric.txx  itkSamplesNormalizedCorrelationImageToImageMetric.txx
REGGUI_GUI/lib/itk/rigid_mm_reg/: CMakeLists.txt  MyRigidMMRegistration.cxx  itkLocalJacobianTransform.h
REGGUI_GUI/lib/itk/rigid_mm_reg/rigid_mm_reg_2D/: CMakeLists.txt  MyRigidMMRegistration2D.cxx  itkMattesMutualInformationHelper.h  itkMattesMutualInformationImageToImageMetricNew.txx
REGGUI_GUI/lib/itk/rigid_reg/rigid_reg_2D/: CMakeLists.txt  MyRigidRegistration2D.cxx
REGGUI_userdata/: default_data_path.txt  reggui_logs.txt
RS2MC2conversion/: HU_Density_Conversion__from_RS_initial.txt  RS_MaterialComp.txt  convertRSmaterial2MCsquare.m  exportRSConversion2MC2.m  material.txt  read_RS_param.m
data/: BDL_default_UN1_G0_Al_RangeShifter_tilted.txt
openFLASH/: ComputeFinalDoseRate.m  DRaEstimate.m  computeDoseWithCEF.m  configMiropt_RS.m  doseAveragedDoseRate.m  fC_logAnalysis.m  fitEllipse.m  flashLoadAndCompute.m  getDRa.m  getMachineParam.m  getMaterialPropCT.m  getParamSnout.m  get_beamEvent_info.m  orderALongScarves.m  overwriteWithLogs.m  parseFLASHplan.m  plotDoseRate.m  setFlashDICOMdict.m  walkBranches.m
openMCsquare/: MCsquare.bat
scanners_and_BDL/: BDL_default.txt
scripts/: copyFLASHqaFiles.m  pickDADRatPoints.m  test_DRqa.m  test_fC_logAnalysis.m  (+1 more)
(+446 files in other folders)
